--- a/templates/wofi.css
+++ b/templates/wofi.css
@@ -1,25 +1,24 @@
 @define-color bg {background};
 @define-color fg {foreground};
-@define-color gray1 {color2};
-@define-color gray2 {color8};
-@define-color gray3 {color4};
-@define-color gray4 {color3};
-@define-color gray5 {color5};
+@define-color surface {surface};
+@define-color border {color8};
+@define-color accent {accent};
+@define-color accent_dim {accent_dim};
 @define-color fg_bright {color15};
 
 window {
     background-color: @bg;
-    border: 2px solid @gray3;
+    border: 2px solid @accent;
 }
 
 input {
     background-color: @bg;
     color: @fg;
-    border: 1px solid @gray2;
+    border: 1px solid @border;
 }
 
 input:selected {
-    background-color: @gray1;
+    background-color: @accent;
     color: @fg_bright;
 }
 
@@ -31,7 +30,7 @@ input:selected {
 }
 
 #entry:selected {
-    background-color: @gray1;
+    background-color: @accent_dim;
     color: @fg_bright;
 }
 
@@ -40,10 +39,10 @@ scrollbar {
 }
 
 scrollbar slider {
-    background-color: @gray2;
+    background-color: @border;
     border-radius: 5px;
 }
 
 scrollbar slider:hover {
-    background-color: @gray3;
+    background-color: @accent;
 }
